--- a/config/accounts-prod.properties
+++ b/config/accounts-prod.properties
@@ -1,10 +1,10 @@
-accounts.msg =Welcome to the EazyBank Accounts Prod application
-accounts.build-version=1
+accounts.msg =Welcome to the XYZ Accounts Prod application
+accounts.build-version=3
 
-accounts.mailDetails.hostName=prod-accounts@eazybytes.com
-accounts.mailDetails.port=9010
-accounts.mailDetails.from=prod-accounts@eazybytes.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Production Environment
+accounts.mailDetails.hostName=hemantpurkar-prodaccounts@example.com
+accounts.mailDetails.port=9003
+accounts.mailDetails.from=hemantpurkar-prodaccounts@example.com
+accounts.mailDetails.subject=Your Account Details from XYZ Bank Prod Environment
 
 accounts.activeBranches[0]=Hyderabad
 accounts.activeBranches[1]=Paris
