--- a/config/cards.properties
+++ b/config/cards.properties
@@ -1,11 +1,11 @@
-accounts.msg =Welcome to the EazyBank Accounts Default application
-accounts.build-version=3
+cards.msg =Welcome to the XYZ Bank Cards Default application
+cards.build-version=1
 
-accounts.mailDetails.hostName=default-accounts@eazybytes.com
-accounts.mailDetails.port=9000
-accounts.mailDetails.from=default-accounts@eazybytes.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Default Environment
+cards.mailDetails.hostName=hemantpurkar-defaultcards@example.com
+cards.mailDetails.port=9021
+cards.mailDetails.from=hemantpurkar-defaultcards@example.com
+cards.mailDetails.subject=Your Card Details from XYZ Bank Default Environment
 
-accounts.activeBranches[0]=Mumbai
-accounts.activeBranches[1]=London
-accounts.activeBranches[2]=Washington
+cards.activeBranches[0]=Mumbai
+cards.activeBranches[1]=London
+cards.activeBranches[2]=Washington
