--- a/config/loans-dev.properties
+++ b/config/loans-dev.properties
@@ -1,11 +1,11 @@
-accounts.msg =Welcome to the EazyBank Accounts Dev application
-accounts.build-version=2
+loans.msg =Welcome to the XYZ Bank Loan DEV application
+loans.build-version=2
 
-accounts.mailDetails.hostName=dev-accounts@eazybytes.com
-accounts.mailDetails.port=9020
-accounts.mailDetails.from=dev-accounts@eazybytes.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Dev Environment
+loans.mailDetails.hostName=hemantpurkar-devloans@example.com
+loans.mailDetails.port=9012
+loans.mailDetails.from=hemantpurkar-devloans@example.com
+loans.mailDetails.subject=Your Loan Details from XYZ Bank DEV Environment
 
-accounts.activeBranches[0]=Chennai
-accounts.activeBranches[1]=Berlin
-accounts.activeBranches[2]=Indianapollis
+loans.activeBranches[0]=Chennai
+loans.activeBranches[1]=Berlin
+loans.activeBranches[2]=Indianapollis
