--- a/config/loans-prod.properties
+++ b/config/loans-prod.properties
@@ -1,11 +1,11 @@
-accounts.msg =Welcome to the EazyBank Accounts Prod application
-accounts.build-version=1
+loans.msg =Welcome to the XYZ Bank Loan Prod application
+loans.build-version=2
 
-accounts.mailDetails.hostName=prod-accounts@eazybytes.com
-accounts.mailDetails.port=9010
-accounts.mailDetails.from=prod-accounts@eazybytes.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Production Environment
+loans.mailDetails.hostName=hemantpurkar-prodloans@example.com
+loans.mailDetails.port=9013
+loans.mailDetails.from=hemantpurkar-prodloans@example.com
+loans.mailDetails.subject=Your Loan Details from XYZ Bank Prod Environment
 
-accounts.activeBranches[0]=Hyderabad
-accounts.activeBranches[1]=Paris
-accounts.activeBranches[2]=NewYork
+loans.activeBranches[0]=Hyderabad
+loans.activeBranches[1]=Paris
+loans.activeBranches[2]=NewYork
