--- a/config/loans.properties
+++ b/config/loans.properties
@@ -1,11 +1,11 @@
-accounts.msg =Welcome to the EazyBank Accounts Default application
-accounts.build-version=3
+loans.msg =Welcome to the XYZ Bank Loan Default application
+loans.build-version=1
 
-accounts.mailDetails.hostName=default-accounts@eazybytes.com
-accounts.mailDetails.port=9000
-accounts.mailDetails.from=default-accounts@eazybytes.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Default Environment
+loans.mailDetails.hostName=hemantpurkar-defaultloans@example.com
+loans.mailDetails.port=9011
+loans.mailDetails.from=hemantpurkar-defaultloans@example.com
+loans.mailDetails.subject=Your Loan Details from XYZ Bank Default Environment
 
-accounts.activeBranches[0]=Mumbai
-accounts.activeBranches[1]=London
-accounts.activeBranches[2]=Washington
+loans.activeBranches[0]=Mumbai
+loans.activeBranches[1]=London
+loans.activeBranches[2]=Washington
