--- a/config/accounts.properties
+++ b/config/accounts.properties
@@ -1,10 +1,10 @@
-accounts.msg =Welcome to the EazyBank Accounts Default application
-accounts.build-version=3
+accounts.msg =Welcome to the XYZ Accounts Default application
+accounts.build-version=1
 
-accounts.mailDetails.hostName=default-accounts@eazybytes.com
-accounts.mailDetails.port=9000
-accounts.mailDetails.from=default-accounts@eazybytes.com
-accounts.mailDetails.subject=Your Account Details from Eazy Bank Default Environment
+accounts.mailDetails.hostName=hemantpurkar-defaultaccounts@example.com
+accounts.mailDetails.port=9001
+accounts.mailDetails.from=hemantpurkar-defaultaccounts@example.com
+accounts.mailDetails.subject=Your Account Details from XYZ Bank Default Environment
 
 accounts.activeBranches[0]=Mumbai
 accounts.activeBranches[1]=London
