--- a/config/cards-dev.properties
+++ b/config/cards-dev.properties
@@ -1,10 +1,10 @@
-cards.msg =Welcome to the EazyBank Cards Dev application
+cards.msg =Welcome to the XYZ Bank Cards Dev application
 cards.build-version=2
 
-cards.mailDetails.hostName=dev-cards@eazybytes.com
+cards.mailDetails.hostName=hemantpurkar-devcards@example.com
 cards.mailDetails.port=9022
-cards.mailDetails.from=dev-cards@eazybytes.com
-cards.mailDetails.subject=Your Card Details from Eazy Bank Dev Environment
+cards.mailDetails.from=hemantpurkar-devcards@example.com
+cards.mailDetails.subject=Your Card Details from XYZ Bank Dev Environment
 
 cards.activeBranches[0]=Chennai
 cards.activeBranches[1]=Berlin
