--- a/config/cards-prod.properties
+++ b/config/cards-prod.properties
@@ -1,10 +1,10 @@
-cards.msg =Welcome to the EazyBank Cards Prod application
-cards.build-version=1
+cards.msg =Welcome to the XYZ Bank Cards Prod application
+cards.build-version=3
 
-cards.mailDetails.hostName=prod-cards@eazybytes.com
-cards.mailDetails.port=9012
-cards.mailDetails.from=prod-cards@eazybytes.com
-cards.mailDetails.subject=Your Card Details from Eazy Bank Production Environment
+cards.mailDetails.hostName=hemantpurkar-prodcards@example.com
+cards.mailDetails.port=9023
+cards.mailDetails.from=hemanpurkar-prodcards@example.com
+cards.mailDetails.subject=Your Card Details from XYZ Bank Production Environment
 
 cards.activeBranches[0]=Hyderabad
 cards.activeBranches[1]=Paris
